ecmascript/parser/tests/test262-error-references/fail/aae75623a18fa153.module.js.stderr
error: Expected from, got <eof>
 --> $DIR/tests/test262-parser/fail/aae75623a18fa153.module.js:1:9
  |
1 | import {}
  |         ^

